--- a/FreeCodeCamp/Wiki Searcher/index.html
+++ b/FreeCodeCamp/Wiki Searcher/index.html
@@ -15,13 +15,38 @@
 
 
 
+    <div class="row">
+      <div class="col-sm-12">
+        <h1>Wikipedia Searcher</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <p>Your #1 Wikipedia Searcher on the web!</p>
+      </div>
+    </div>
+
+    <!-- <hr> -->
+
+    <div class="row">
+      <div class="col-sm-12">
+        <div id="searchArea">
+          <input type="text" name="searchBar" value="">
+          <button type="button" name="searchButton">Search</button>
+        </div>
+      </div>
+    </div>
 
 
 
 
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
     <script src="jquery/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="mainJS.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="javascripts/script.js"></script>
   </body>
 </html>
